Building up the frontend

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,14 +10,14 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/python_module)
 
 # pybind11
 add_subdirectory(pybind11)
-pybind11_add_module(test_pybind "TensorFrost/Frontend/Python/test_pybind.cpp")
+pybind11_add_module(TensorFrost "TensorFrost/Frontend/Python/TensorPybind.cpp")
 
 find_package(PythonLibs REQUIRED)
 include_directories(${PYTHON_INCLUDE_PATH})
 
 # Custom command to run pip install .
 add_custom_command(
-    TARGET test_pybind
+    TARGET TensorFrost
     POST_BUILD
     COMMAND ${PYTHON_EXECUTABLE} -m pip install .
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
@@ -25,5 +25,5 @@ add_custom_command(
 
 # Custom target that depends on test_pybind and runs the custom command
 add_custom_target(install_python_package ALL
-    DEPENDS test_pybind
+    DEPENDS TensorFrost
 )
