Python version rebuild script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.12)
 project(TensorFrost)
 
-set(PYBIND11_FINDPYTHON ON)
 set(CMAKE_CXX_STANDARD 20)
 
 # Set the output directory for the .pyd file
@@ -14,6 +13,9 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/PythonBuild/TensorF
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/PythonBuild/TensorFrost)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/PythonBuild/TensorFrost)
 set(CMAKE_PDB_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/PythonBuild/TensorFrost)
+
+set(PYBIND11_PYTHON_VERSION "3.10" CACHE STRING "Default Python version")
+find_package (Python3 ${PYBIND11_PYTHON_VERSION} EXACT COMPONENTS Interpreter Development)
 
 # pybind11
 add_subdirectory(pybind11)
