--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 # pybind11
 add_subdirectory(pybind11)
 add_subdirectory(glfw)
+add_subdirectory(glad)
 add_subdirectory(TensorFrost)
 add_subdirectory(examples)
 
