--- a/TensorFrost/CMakeLists.txt
+++ b/TensorFrost/CMakeLists.txt
@@ -9,6 +9,9 @@ target_link_libraries(TensorFrost PRIVATE glfw)
 glad_add_library(glad_gl_core_46 SHARED API gl:core=4.6)
 target_link_libraries(TensorFrost PRIVATE glad_gl_core_46)
 
+glad_add_library(glad_vulkan_12 REPRODUCIBLE LOADER API vulkan=1.2)
+target_link_libraries(TensorFrost PRIVATE glad_vulkan_12)
+
 target_include_directories(TensorFrost PRIVATE ${Python3_INCLUDE_DIRS})
 
 target_include_directories(TensorFrost PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
