--- a/TensorFrost/CMakeLists.txt
+++ b/TensorFrost/CMakeLists.txt
@@ -45,5 +45,9 @@ set_target_properties(TensorFrost PROPERTIES
     VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
 )
 
+set(ENV{TENSORFROST_PYTHON_EXECUTABLE} ${Python3_EXECUTABLE})
+set(ENV{TENSORFROST_DEBUG_PYTHON_SCRIPT} ${CMAKE_SOURCE_DIR}/examples/debug.py)
+set(ENV{TENSORFROST_PROJECT_DIR} ${CMAKE_SOURCE_DIR})
+
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX "Source Files" FILES ${TENSORFROST_SOURCE_LIST} ${TENSORFROST_HEADER_LIST})
 
