--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,4 @@ imgui.ini
 examples/Algorithms/mnist.npz
 *.npz
 examples/ML/mnist.npz
-/cmake-build-debug-visual-studio
-/.idea
-/cmake-build-release-visual-studio
+/cmake-build-*
