--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -11,7 +11,7 @@ on:
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
-  PYTHON_VERSION: 3.10
+  PYTHON_VERSION: "3.10"
 
 jobs:
   build:
@@ -24,14 +24,15 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5.1.1
       with:
-        python-version: ${{env.PYTHON_VERSION}}
+        python-version: "3.10.1"
+
     - name: Install Python packages
       run: pip install -r requirements.txt
     
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -DPYBIND11_PYTHON_VERSION=${{env.PYTHON_VERSION}} -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -DPYBIND11_PYTHON_VERSION=${{env.PYTHON_VERSION}} -S . -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       # Build your program with the given configuration
