--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -24,7 +24,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5.1.1
       with:
-        python-version: "3.10.1"
+        python-version: ${{env.PYTHON_VERSION}}
 
     - name: Install Python packages
       run: pip install -r requirements.txt
