--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -24,6 +24,10 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: recursive
+
+    - name: Versions
+      run: where python
+        
     - uses: actions/setup-python@v5.1.1
       with:
         python-version: ${{env.PYTHON_VERSION}}
