--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -26,7 +26,7 @@ jobs:
         submodules: recursive
 
     - name: Versions
-      run: where python
+      run: cmd.exe /C where python
         
     - uses: actions/setup-python@v5.1.1
       with:
