--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -1,5 +1,3 @@
-# This starter workflow is for a CMake project running on a single platform. There is a different starter workflow if you need cross-platform coverage.
-# See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-multi-platform.yml
 name: Build and Deploy to PYPI
 
 on:
@@ -29,7 +27,6 @@ jobs:
       with:
         python-version: ${{env.PYTHON_VERSION}}
     - run: cmd.exe /C where python
-    - run: pip install -r requirements.txt
 
     - uses: actions/setup-python@v5.1.1
       with:
@@ -39,20 +36,21 @@ jobs:
     
     
     - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: cmake -DPYBIND11_PYTHON_VERSION="${{env.PYTHON_VERSION}}" -S . -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Versions Berfore
       run: cmd.exe /C where python
 
     - name: Build
-      # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
-    - name: Test
+    - name: Install package 'build'
+      run: py -${{env.PYTHON_VERSION}} -m pip install build
+
+    - name: Build Wheel
+      run: py -${{env.PYTHON_VERSION}} -m build -w ./PythonBuild
+  
+    - name: Publish
       working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: echo "Done"
 
