--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -50,10 +50,15 @@ jobs:
     - name: Build Wheel
       run: py -${{env.PYTHON_VERSION}} -m build -w ./PythonBuild
   
-    - name: Publish package to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        packages-dir: ./PythonBuild/dist
-        user: __token__
-        password: ${{secrets.PYPI_REPO_TOKEN}}
+    # - name: Publish package to PyPI
+    #   uses: pypa/gh-action-pypi-publish@release/v1
+    #   with:
+    #     packages-dir: ./PythonBuild/dist
+    #     user: __token__
+    #     password: ${{secrets.PYPI_REPO_TOKEN}}
 
+    - name: Install Twine 
+      run: py -${{env.PYTHON_VERSION}} -m pip install twine
+
+    - name: Publish on PyPI
+      run: py -%PYTHON_VERSION% -m twine -r testpypi  ./PythonBuild/dist -u __token__ -p ${{secrets.PYPI_REPO_TOKEN}}
