--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -1,10 +1,8 @@
 name: Build and Deploy to PYPI
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
+    
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -61,4 +59,4 @@ jobs:
       run: py -${{env.PYTHON_VERSION}} -m pip install twine
 
     - name: Publish on PyPI
-      run: py -${{env.PYTHON_VERSION}} -m twine upload ./PythonBuild/dist/* -u __token__ -p ${{secrets.PYPI_REPO_TOKEN}}
+      run: py -${{env.PYTHON_VERSION}} -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{secrets.PYPI_REPO_TOKEN}} PythonBuild/dist/* --verbose --disable-progress-bar
