--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -2,7 +2,6 @@ name: Build and Deploy to PYPI
 
 on:
   workflow_dispatch:
-    
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -10,12 +9,8 @@ env:
   PYTHON_VERSION: "3.11"
 
 jobs:
-  build:
-    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
-    # You can convert this to a matrix build if you need cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
+  build-windows:
     runs-on: windows-latest
-
     steps:
     - uses: actions/checkout@v4
       with:
@@ -24,39 +19,64 @@ jobs:
     - uses: actions/setup-python@v5.1.1
       with:
         python-version: ${{env.PYTHON_VERSION}}
-    - run: cmd.exe /C where python
 
     - uses: actions/setup-python@v5.1.1
       with:
         python-version: "3.12.4"
-    - run: cmd.exe /C where python
     - run: pip install -r requirements.txt
     
-    
     - name: Configure CMake
-      run: cmake -DPYBIND11_PYTHON_VERSION="${{env.PYTHON_VERSION}}" -S . -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-
-    - name: Versions Berfore
-      run: cmd.exe /C where python
+      run: cmake -DPYBIND11_PYTHON_VERSION="${{ env.PYTHON_VERSION }}" -S . -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
 
     - name: Build
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{ github.workspace }}/build --config ${{ env.BUILD_TYPE }}
 
     - name: Install package 'build'
-      run: py -${{env.PYTHON_VERSION}} -m pip install build
+      run: py -${{ env.PYTHON_VERSION }} -m pip install build
 
     - name: Build Wheel
-      run: py -${{env.PYTHON_VERSION}} -m build -w ./PythonBuild
-  
-    # - name: Publish package to PyPI
-    #   uses: pypa/gh-action-pypi-publish@release/v1
-    #   with:
-    #     packages-dir: ./PythonBuild/dist
-    #     user: __token__
-    #     password: ${{secrets.PYPI_REPO_TOKEN}}
+      run: py -${{ env.PYTHON_VERSION }} -m build -w ./PythonBuild
 
-    - name: Install Twine 
-      run: py -${{env.PYTHON_VERSION}} -m pip install twine
+    - name: Install Twine
+      run: py -${{ env.PYTHON_VERSION }} -m pip install twine
 
     - name: Publish on PyPI
-      run: py -${{env.PYTHON_VERSION}} -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{secrets.PYPI_REPO_TOKEN}} PythonBuild/dist/* --verbose --disable-progress-bar
+      run: py -${{ env.PYTHON_VERSION }} -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} PythonBuild/dist/* --verbose --disable-progress-bar
+
+  build-manylinux:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
+
+    - name: Set up Python
+      uses: actions/setup-python@v5.1.1
+      with:
+        python-version: ${{ env.PYTHON_VERSION }}
+
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+        pip install cmake
+        pip install auditwheel
+        pip install build
+
+    - name: Build Wheel
+      run: |
+        cmake -DPYBIND11_PYTHON_VERSION="${{ env.PYTHON_VERSION }}" -S . -B build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
+        cmake --build build --config ${{ env.BUILD_TYPE }}
+        python -m build -w ./PythonBuild
+
+    - name: Repair Wheel with auditwheel
+      run: |
+        mkdir -p repaired_wheels
+        for whl in dist/*.whl; do
+          auditwheel repair "$whl" --plat manylinux2014_x86_64 -w repaired_wheels/
+        done
+
+    - name: Install Twine
+      run: pip install twine
+
+    - name: Publish on PyPI
+      run: python -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} repaired_wheels/* --verbose --disable-progress-bar
