--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -50,6 +50,9 @@ jobs:
       with:
         submodules: recursive
 
+    - name: Install system dependencies
+      run: sudo apt-get update && sudo apt-get install -y wayland-scanner
+
     - name: Set up Python
       uses: actions/setup-python@v5.1.1
       with:
