--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -51,7 +51,7 @@ jobs:
         submodules: recursive
 
     - name: Install system dependencies
-      run: sudo apt-get update && sudo apt-get install -y wayland-protocols
+      run: sudo apt-get update && sudo apt-get install -y wayland-protocols wayland-dev
 
     - name: Set up Python
       uses: actions/setup-python@v5.1.1
