--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -45,6 +45,10 @@ jobs:
 
   build-manylinux:
     runs-on: ubuntu-latest
+    container:
+      image: quay.io/pypa/manylinux2014_x86_64
+    env:
+      PYTHON_VERSION: "cp${{ env.PYTHON_VERSION | replace('.', '') }}-cp${{ env.PYTHON_VERSION | replace('.', '') }}"
     steps:
     - uses: actions/checkout@v4
       with:
@@ -52,40 +56,33 @@ jobs:
 
     - name: Install system dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          libwayland-bin \
-          libwayland-dev \
-          libwayland-egl-backend-dev \
-          libxkbcommon-dev \
-          libxrandr-dev \
-          libxinerama-dev \
-          libx11-dev \
-          libxcursor-dev \
-          libxi-dev \
-          libxext-dev \
-          libxcomposite-dev \
-          libxdamage-dev \
-          libxfixes-dev \
-          mesa-common-dev
+        yum install -y \
+          wayland-devel \
+          libX11-devel \
+          libXcursor-devel \
+          libXi-devel \
+          libXext-devel \
+          libXrandr-devel \
+          libXinerama-devel \
+          libXcomposite-devel \
+          libXdamage-devel \
+          libXfixes-devel \
+          mesa-libGL-devel \
+          mesa-libEGL-devel
 
     - name: Set up Python
-      uses: actions/setup-python@v5.1.1
-      with:
-        python-version: ${{ env.PYTHON_VERSION }}
+      run: /opt/python/${{ env.PYTHON_VERSION }}/bin/python -m ensurepip
 
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
-        pip install cmake
-        pip install auditwheel
-        pip install build
+        /opt/python/${{ env.PYTHON_VERSION }}/bin/pip install -r requirements.txt
+        /opt/python/${{ env.PYTHON_VERSION }}/bin/pip install cmake auditwheel build
 
     - name: Build Wheel
       run: |
-        cmake -DPYBIND11_PYTHON_VERSION="${{ env.PYTHON_VERSION }}" -S . -B build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
-        cmake --build build --config ${{ env.BUILD_TYPE }}
-        python -m build -w ./PythonBuild
+        cmake -DPYBIND11_PYTHON_VERSION="${{ env.PYTHON_VERSION }}" -S . -B build -DCMAKE_BUILD_TYPE=Release
+        cmake --build build --config Release
+        /opt/python/${{ env.PYTHON_VERSION }}/bin/python -m build -w ./PythonBuild
 
     - name: Repair Wheel with auditwheel
       run: |
@@ -95,7 +92,7 @@ jobs:
         done
 
     - name: Install Twine
-      run: pip install twine
+      run: /opt/python/${{ env.PYTHON_VERSION }}/bin/pip install twine
 
     - name: Publish on PyPI
-      run: python -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} repaired_wheels/* --verbose --disable-progress-bar
+      run: /opt/python/${{ env.PYTHON_VERSION }}/bin/python -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} repaired_wheels/* --verbose --disable-progress-bar
