--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -50,21 +50,9 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Set up Docker
+    - name: Build Wheel in manylinux2014 Docker container
       run: |
-        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-        sudo add-apt-repository \
-          "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
-          $(lsb_release -cs) \
-          stable"
-        sudo apt-get update
-        sudo apt-get install -y docker-ce docker-ce-cli containerd.io
-
-    - name: Build Wheel in Docker
-      run: |
-        docker run --rm -v $(pwd):/io quay.io/pypa/manylinux2014_x86_64 /bin/bash -c "
-          cd /io &&
-          yum install -y epel-release &&
+        docker run --rm -v $(pwd):/project quay.io/pypa/manylinux2014_x86_64 /bin/bash -c "
           yum install -y \
             libwayland-bin \
             libwayland-dev \
@@ -79,15 +67,15 @@ jobs:
             libxcomposite-dev \
             libxdamage-dev \
             libxfixes-dev \
-            mesa-common-dev &&
-          /opt/python/cp311-cp311/bin/pip install cmake auditwheel build &&
-          cmake -DPYBIND11_PYTHON_VERSION='${PYTHON_VERSION}' -S . -B build -DCMAKE_BUILD_TYPE='${BUILD_TYPE}' &&
-          cmake --build build --config '${BUILD_TYPE}' &&
-          /opt/python/cp311-cp311/bin/python -m build -w ./PythonBuild &&
-          mkdir -p repaired_wheels &&
-          for whl in PythonBuild/dist/*.whl; do
-            auditwheel repair \"$whl\" --plat manylinux2014_x86_64 -w repaired_wheels/
-          done
+            mesa-common-dev && \
+          cd /project && \
+          /opt/python/cp311-cp311/bin/python -m pip install -r requirements.txt && \
+          /opt/python/cp311-cp311/bin/python -m pip install cmake auditwheel build && \
+          cmake -DPYBIND11_PYTHON_VERSION=3.11 -S . -B build -DCMAKE_BUILD_TYPE=Release && \
+          cmake --build build --config Release && \
+          /opt/python/cp311-cp311/bin/python -m build -w ./PythonBuild && \
+          mkdir -p repaired_wheels && \
+          for whl in PythonBuild/dist/*.whl; do auditwheel repair \"$whl\" --plat manylinux2014_x86_64 -w repaired_wheels/; done
         "
 
     - name: Install Twine
