--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -47,47 +47,29 @@ jobs:
   build-manylinux:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-      with:
-        submodules: recursive
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
-    - name: Set up Python
-      uses: actions/setup-python@v5.1.1
-      with:
-        python-version: ${{ env.PYTHON_VERSION }}
+      - name: Build Wheel in manylinux2014 Docker
+        run: |
+          docker run --rm -v $(pwd):/io quay.io/pypa/manylinux2014_x86_64 bash -c "
+            yum install -y epel-release &&
+            yum install -y cmake3 make gcc gcc-c++ \
+              mesa-libGL-devel libXrandr-devel libXinerama-devel libXcursor-devel \
+              libXi-devel libX11-devel libXext-devel libXcomposite-devel libXdamage-devel \
+              libXfixes-devel wayland-devel wayland-protocols-devel &&
+            cd /io &&
+            /opt/python/cp311-cp311/bin/pip install -r requirements.txt &&
+            cmake -DPYBIND11_PYTHON_VERSION=${{ env.PYTHON_VERSION }} -S . -B build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} &&
+            cmake --build build --config ${ env.BUILD_TYPE } &&
+            /opt/python/cp311-cp311/bin/python -m pip install build &&
+            /opt/python/cp311-cp311/bin/python -m build -w ./PythonBuild &&
+            auditwheel repair PythonBuild/dist/*.whl -w /io/repaired_wheels
+          "
 
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
-        pip install cmake
-        pip install build
-        pip install cibuildwheel==2.19.2
+      - name: Install Twine
+        run: pip install twine
 
-    - name: Build using cibuildwheel
-      run: python -m cibuildwheel --output-dir wheelhouse
-      env:
-        CIBW_MANYLINUX_X86_64_IMAGE: ${{ env.CIBW_MANYLINUX_X86_64_IMAGE }}
-        CIBW_BEFORE_BUILD: |
-          yum install -y \
-            libwayland-bin \
-            libwayland-dev \
-            libwayland-egl-backend-dev \
-            libxkbcommon-dev \
-            libxrandr-dev \
-            libxinerama-dev \
-            libx11-dev \
-            libxcursor-dev \
-            libxi-dev \
-            libxext-dev \
-            libxcomposite-dev \
-            libxdamage-dev \
-            libxfixes-dev \
-            mesa-common-dev
-        CIBW_BEFORE_BUILD_LINUX: |
-          mkdir -p build && cd build && cmake -DPYBIND11_PYTHON_VERSION=${{ env.PYTHON_VERSION }} -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} .. && make
-
-    - name: Install Twine
-      run: pip install twine
-
-    - name: Publish on PyPI
-      run: python -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} wheelhouse/* --verbose --disable-progress-bar
+      - name: Publish on PyPI
+        run: python -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} repaired_wheels/* --verbose --disable-progress-bar
