--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -46,33 +46,35 @@ jobs:
 
   build-manylinux:
     runs-on: ubuntu-latest
+    container:
+      image: quay.io/pypa/manylinux2014_x86_64
     steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
-      - name: Build Wheel in manylinux2014 Docker
-        run: |
-          docker run --rm -v $(pwd):/io quay.io/pypa/manylinux2014_x86_64 bash -c "
-            yum install -y epel-release &&
-            yum install -y cmake3 make gcc gcc-c++ \
-              mesa-libGL-devel libXrandr-devel libXinerama-devel libXcursor-devel \
-              libXi-devel libX11-devel libXext-devel libXcomposite-devel libXdamage-devel \
-              libXfixes-devel wayland-devel wayland-protocols-devel python3-devel &&
-            export PATH=/opt/python/cp311-cp311/bin:$PATH &&
-            export PYTHON_INCLUDE_DIR=/opt/python/cp311-cp311/include/python3.11 &&
-            export PYTHON_LIBRARY=/opt/python/cp311-cp311/lib/libpython3.11.so &&
-            cd /io &&
-            /opt/python/cp311-cp311/bin/pip install -r requirements.txt &&
-            cmake -DPYBIND11_PYTHON_VERSION=${PYTHON_VERSION} -DPython3_ROOT_DIR=/opt/python/cp311-cp311/ -DPython3_INCLUDE_DIR=${PYTHON_INCLUDE_DIR} -DPython3_LIBRARIES=${PYTHON_LIBRARY} -S . -B build -DCMAKE_BUILD_TYPE=${BUILD_TYPE} &&
-            cmake --build build --config ${BUILD_TYPE} &&
-            /opt/python/cp311-cp311/bin/python -m pip install build &&
-            /opt/python/cp311-cp311/bin/python -m build -w ./PythonBuild &&
-            auditwheel repair PythonBuild/dist/*.whl -w /io/repaired_wheels
-          "
+    - name: Install dependencies
+      run: |
+        /opt/python/cp311-cp311/bin/pip install -r requirements.txt
+        /opt/python/cp311-cp311/bin/pip install cmake
+        /opt/python/cp311-cp311/bin/pip install auditwheel
+        /opt/python/cp311-cp311/bin/pip install build
 
-      - name: Install Twine
-        run: pip install twine
+    - name: Build Wheel
+      run: |
+        cmake -DPYBIND11_PYTHON_VERSION="${{ env.PYTHON_VERSION }}" -S . -B build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
+        cmake --build build --config ${{ env.BUILD_TYPE }}
+        /opt/python/cp311-cp311/bin/python -m build -w ./PythonBuild
 
-      - name: Publish on PyPI
-        run: python -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} repaired_wheels/* --verbose --disable-progress-bar
+    - name: Repair Wheel with auditwheel
+      run: |
+        mkdir -p repaired_wheels
+        for whl in PythonBuild/dist/*.whl; do
+          auditwheel repair "$whl" --plat manylinux2014_x86_64 -w repaired_wheels/
+        done
+
+    - name: Install Twine
+      run: /opt/python/cp311-cp311/bin/pip install twine
+
+    - name: Publish on PyPI
+      run: /opt/python/cp311-cp311/bin/python -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} repaired_wheels/* --verbose --disable-progress-bar
